Added new field (deleted) in organization table, change swagger file and comment seeds files
